Sources/sdk/sccca.h

/*
|  T Y P E D E F S
*/

typedef VTHDOC   VTHCONTENT;
typedef VTLPHDOC VTLPHCONTENT;
/*
|  S T R U C T U R E S
*/


typedef struct tagSCCCAGETCONTENT
{
    VTDWORD  dwStructSize;
    VTDWORD  dwFlags;
    VTDWORD  dwMaxBufSize;
    VTDWORD  dwType;
    VTDWORD  dwSubType;
    VTDWORD  dwData1;
    VTDWORD  dwData2;
    VTDWORD  dwData3;
    VTDWORD  dwData4;
    VTDWORD  dwDataBufSize;
    VTVOID *pDataBuf;
} SCCCAGETCONTENT, *PSCCCAGETCONTENT;
/* Possible values for SCCCAGETCONTENT.dwType */
#define  SCCCA_TEXT                 0x0001
#define  SCCCA_ENDTAG               0x0003
#define  SCCCA_FILEPROPERTY         0x0004
#define  SCCCA_STYLECHANGE          0x0007
#define  SCCCA_ANNOTATION           0x000a
/* If dwType equals SCCCA_BEGINTAG or SCCCA_ENDTAG then dwSubType can ... */
/*
    Anything that gets added here should have a corresponding string added in
    exd_ixml.c.  TAGNAMETBLSIZE will need to be changed in ex_main.h.  The
    SearchML schema will also have to change.
*/
#define  SCCCA_DOCUMENTPROPERTY     0x00010000
/* If dwType equals SCCCA_FILEPROPERTY then dwSubType can ... */
#define  SCCCA_FILEID               0x0001
					
/* values for SCCCA_COMMENTREFERENCE */
#define SCCCA_COMMENT_PARAGRAPH    0
#define SCCCA_COMMENT_CELL         1
#define SCCCA_COMMENT_SLIDE        2
#define SCCCA_COMMENT_VECTORPAGE   3
/*
|   If dwType equals SCCCA_ENDTAG
|   and dwSubType equals SCCCA_DOCUMENTPROPERTY
|   then dwData1 can be:
*/

#define SCCCA_NOGENERATEDTEXT       0
#define SCCCA_GENERATEDTEXT         1
#define SCCCA_COULDNOTGENERATE      0xffffffff
/*
|   If dwType equals SCCCA_FILEPROPERTY
|   and dwSubType equals SCCCA_FILEID
|   then dwData1 can be one of the file id values found in sccfi.h
*/


/* Possible values for dwData2 element of SCCCAGETCONTENT */
/*
|   If dwType equals SCCCA_TEXT
|   then dwData2 is the character set of the data provided in pDataBuf.
*/

/* dwData3 and dwData4 are reserved */

/* Possible values of SCCCAGETCONTENT.dwSubType: */
/* If dwType equals SCCCA_STYLECHANGE then dwSubType can be ... */
#define  SCCCA_PARASTYLE         0x00000001
#define  SCCCA_CHARSTYLE         0x00000002
/*
    Height and spacing are specified together because spacing can be relative
    to height.
*/
#define SCCCA_HEIGHTANDSPACING  0x00000003
/*
    Indents are specified together because they can all be specified at once and
    because first line indent can be relative to left indent.
*/
#define SCCCA_INDENTS           0x00000004
#define SCCCA_OCE               0x00000005  /*  Original character encoding.  */
#define SCCCA_TEXTCONT          0x00000006  /*  Continuation for text.  */
#define SCCCA_HYPERLINKCONT     0x00000007  /*  Continuation for hyperlink.  */
/*
    Possible values of dwData1 when dwType = SCCCA_STYLECHANGE and
    dwSubType = SCCCA_PARASTYLE.
*/
#define SCCCA_PARASTYLENAME     0x00000001
/*
    Possible values of dwData1 when dwType = SCCCA_STYLECHANGE and
    dwSubType = SCCCA_HEIGHTANDSPACING.  One or more orred together.
*/
#define SCCCA_HEIGHT            0x00010000
#define SCCCA_SPACING           0x00020000
/*
    Possible values of dwData1 when dwType = SCCCA_STYLECHANGE and
    dwSubType = SCCCA_INDENTS.  One or more orred together.
*/
#define SCCCA_LEFTINDENT        0x00010000
#define SCCCA_RIGHTINDENT       0x00020000
#define SCCCA_FIRSTINDENT       0x00040000
/*  Possible values of dwSubType when dwType equals SCCCA_ANNOTATION.  */
#define SCCCA_ANNOTATION_FOOTNOTE   1
#define SCCCA_ANNOTATION_ENDNOTE    2
#define SCCCA_ANNOTATION_ANNOTATION 3
#define SCCCA_ANNOTATION_NOTE       4
#define SCCCA_ANNOTATION_COMMENT    5
#define SCCCA_ANNOTATION_SLIDENOTE  6
/*
|  P R O T O T Y P E S
*/

DA_ENTRYSC DAERR DA_ENTRYMOD CAOpenContent(VTHDOC hDoc, VTLPHCONTENT phContent );
DA_ENTRYSC DAERR DA_ENTRYMOD CACloseContent(VTHCONTENT hContent);
DA_ENTRYSC DAERR DA_ENTRYMOD CAReadFirst(VTHCONTENT hContent, PSCCCAGETCONTENT pGetContent);
DA_ENTRYSC DAERR DA_ENTRYMOD CAReadNext(VTHCONTENT hContent, PSCCCAGETCONTENT  pGetContent);
DA_ENTRYSC DAERR DA_ENTRYMOD CATell(VTHCONTENT hContent, PSCCDAPOS pPos );
DA_ENTRYSC DAERR DA_ENTRYMOD CASeek(VTHCONTENT hContent,PSCCDAPOS pPos );