Sources/sccca.pas

     SCCCA_COMMENT_PARAGRAPH = 0;     
     SCCCA_COMMENT_CELL = 1;     
     SCCCA_COMMENT_SLIDE = 2;     
     SCCCA_COMMENT_VECTORPAGE = 3;     
  {
  |   If dwType equals SCCCA_ENDTAG
  |   and dwSubType equals SCCCA_DOCUMENTPROPERTY
  |   then dwData1 can be:
   }
     SCCCA_NOGENERATEDTEXT = 0;     
     SCCCA_GENERATEDTEXT = 1;     
     SCCCA_COULDNOTGENERATE = $ffffffff;     
  {
  |   If dwType equals SCCCA_FILEPROPERTY
  |   and dwSubType equals SCCCA_FILEID
  |   then dwData1 can be one of the file id values found in sccfi.h
   }
  { Possible values for dwData2 element of SCCCAGETCONTENT  }
  {
  |   If dwType equals SCCCA_TEXT
  |   then dwData2 is the character set of the data provided in pDataBuf.
   }
  { dwData3 and dwData4 are reserved  }
  { Possible values of SCCCAGETCONTENT.dwSubType:  }
  { If dwType equals SCCCA_STYLECHANGE then dwSubType can be ...  }
     SCCCA_PARASTYLE = $00000001;     
     SCCCA_CHARSTYLE = $00000002;     
  {
      Height and spacing are specified together because spacing can be relative
      to height.
   }
     SCCCA_HEIGHTANDSPACING = $00000003;     
  {
      Indents are specified together because they can all be specified at once and
      because first line indent can be relative to left indent.
   }
     SCCCA_INDENTS = $00000004;     
  {  Original character encoding.   }
     SCCCA_OCE = $00000005;     
  {  Continuation for text.   }
     SCCCA_TEXTCONT = $00000006;     
  {  Continuation for hyperlink.   }
     SCCCA_HYPERLINKCONT = $00000007;     
  {
      Possible values of dwData1 when dwType = SCCCA_STYLECHANGE and
      dwSubType = SCCCA_PARASTYLE.
   }
     SCCCA_PARASTYLENAME = $00000001;     
  {
      Possible values of dwData1 when dwType = SCCCA_STYLECHANGE and
      dwSubType = SCCCA_HEIGHTANDSPACING.  One or more orred together.
   }
     SCCCA_HEIGHT = $00010000;     
     SCCCA_SPACING = $00020000;     
  {
      Possible values of dwData1 when dwType = SCCCA_STYLECHANGE and
      dwSubType = SCCCA_INDENTS.  One or more orred together.
   }
     SCCCA_LEFTINDENT = $00010000;     
     SCCCA_RIGHTINDENT = $00020000;     
     SCCCA_FIRSTINDENT = $00040000;     
  {  Possible values of dwSubType when dwType equals SCCCA_ANNOTATION.   }
     SCCCA_ANNOTATION_FOOTNOTE = 1;     
     SCCCA_ANNOTATION_ENDNOTE = 2;     
     SCCCA_ANNOTATION_ANNOTATION = 3;     
     SCCCA_ANNOTATION_NOTE = 4;     
     SCCCA_ANNOTATION_COMMENT = 5;     
     SCCCA_ANNOTATION_SLIDENOTE = 6;     

  {
  |  P R O T O T Y P E S
   }
  function CAOpenContent(hDoc:VTHDOC; phContent:VTLPHCONTENT):DAERR;cdecl;              external External_library name 'CAOpenContent';
  function CACloseContent(hContent:VTHCONTENT):DAERR;cdecl;                             external External_library name 'CACloseContent';
  function CAReadFirst(hContent:VTHCONTENT; pGetContent:PSCCCAGETCONTENT):DAERR;cdecl;  external External_library name 'CAReadFirst';
  function CAReadNext(hContent:VTHCONTENT; pGetContent:PSCCCAGETCONTENT):DAERR;cdecl;   external External_library name 'CAReadNext';
  function CATell(hContent:VTHCONTENT; pPos:PSCCDAPOS):DAERR;cdecl;                     external External_library name 'CATell';
  function CASeek(hContent:VTHCONTENT; pPos:PSCCDAPOS):DAERR;cdecl;                     external External_library name 'CASeek';


implementation

end.
